--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fetch": "^1.1.0",
+    "form-data": "^3.0.0",
+    "formdata": "^0.10.4",
     "formidable": "^1.2.1",
     "mongoose": "^5.8.9",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "request": "^2.88.0"
   }
 }
